--- a/dyppis_backend/composer.json
+++ b/dyppis_backend/composer.json
@@ -8,7 +8,7 @@
     "require": {
         "php": "^8.2",
         "ext-pdo": "*",
-        "laravel/framework": "^11.31",
+        "laravel/framework": "^12.9.0",
         "laravel/sanctum": "^4.0",
         "laravel/scout": "^10.13",
         "laravel/tinker": "^2.9"
@@ -53,6 +53,10 @@
         "dev": [
             "Composer\\Config::disableProcessTimeout",
             "npx concurrently -c \"#93c5fd,#c4b5fd,#fb7185,#fdba74\" \"php artisan serve\" \"php artisan queue:listen --tries=1\" \"php artisan pail --timeout=0\" \"npm run dev\" --names=server,queue,logs,vite"
+        ],
+        "db:refresh": [
+            "@php artisan migrate:refresh",
+            "@php artisan db:seed"
         ]
     },
     "extra": {
